Changed page title 🩷

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ask Your Crush 💌</title>
+    <title>Hellu Daniel 💌</title>
   </head>
   <body>
     <div id="root"></div>
